# echobind

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  clipboard.rs  config.rs  error.rs  main.rs  protocol.rs
src/commands/: connect.rs  mod.rs  record.rs
