[package]
name = "echobind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cpal = "0.15.3"
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread", "macros"] }
