[package]
name = "echobind"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cpal = "0.15.3"
opus = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4.1", features = ["std"] }
